--- a/css/keys.css
+++ b/css/keys.css
@@ -5,8 +5,12 @@
   background-color: #a1948b;
 }
 
-html, body, section, ul {
-  height: 100%;
+section {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 header {
@@ -16,15 +20,20 @@ header {
 	background-position: center;
 }
 
+ul {
+  height: 75%;
+}
+
 li {
   float:left;
   width:6.66%;
   position:relative;
+  height: 100%;
 }
 
 /* white keys */
 .white {
-  height:220px;
+  height:95%;
   background:#fff;
   background: linear-gradient(-30deg,#f5f5f5,#fff);
   border:1px solid #ccc;
@@ -35,16 +44,16 @@ li {
 .whitepressed {
   box-shadow:inset 0 20px 20px -20px rgba(0,0,0,0.8),inset 0 2px 2px -20px rgba(0,0,0,0.8), 0 2px 2px rgba(0,0,0,0.4);
   position:relative;
-  height:216px;
+  height:94%;
 }
 
 /* black keys */
 .black {
   position:absolute;
   top:0px;
-  left:-12px;
-  width:20px;
-  height:120px;
+  left:-25%;
+  width:50%;
+  height:55%;
   background:linear-gradient(-20deg,#333,#000,#333);
   z-index:10;
   border-width:1px 2px 7px;
@@ -57,6 +66,6 @@ li {
 .blackpressed {
   border-bottom-width:2px;
   margin-top: 1px;
-  height:123px;
+  height:54.5%;
   box-shadow:inset 0 20px 20px -20px rgba(0,0,0,0.8), inset 0px -1px 1px rgba(255,255,255,0.4),0 1px 0px rgba(0,0,0,0.8),0 2px 2px rgba(0,0,0,0.4),0 -1px 0px #000;
 }
